--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GC2014DigitalMag">
+        <activity android:name=".ZenzelimaActivity"></activity>
+        <activity android:name=".YibabActivity" />
+        <activity android:name=".PedaActivity" />
+        <activity android:name=".PolyActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
