--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GC2014DigitalMag">
-        <activity android:name=".splashScreenActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".yibabActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".zenzelimaActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".selamActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".pedaActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".polyActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".splashScreenActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
