--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,14 +20,16 @@
         <activity android:name=".polyActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".splashScreenActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity"
-                  android:screenOrientation="portrait">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity"
+                  android:screenOrientation="portrait">
+
         </activity>
     </application>
 
