--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vlm.gc2014digitalmag">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GC2014DigitalMag">
+<!--        <activity android:name=".RecyclerViewAdapter"></activity>--> 
         <activity android:name=".yibabActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".zenzelimaActivity"
